<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maishealth.maishealth.AtualizarPerfilPacActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atualizar_perfil"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/TextNomePac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/texto_nome_pac_atualiza"
                android:inputType="text"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/edtEmailPac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edtSenhaPac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:hint="@string/prompt_senha"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/textoCpfPac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/texto_cpf_pac"
                android:inputType="number"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textDataNascPac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_data_nasc_pac"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textoApSexo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_sexo"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textSexoPac"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/sexo_pac"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textTipoSanguePac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/texto_ap_tipo_sang_pac"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textTipoSangPac"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/texto_tipo_Sang_Pac"
                android:textSize="18sp"
                android:visibility="invisible" />

            <LinearLayout
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnVoltaMenuPac"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorButoes"
                    android:onClick="telaRetornoMenuPac"
                    android:text="@string/button_cancelar"
                    android:textColor="@color/colorTextoBut"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnAtualizarPac"
                    style="android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorButoes"
                    android:onClick="telaRetornoMenuPac"
                    android:text="@string/button_atualizar_perfil_pac"
                    android:textColor="@color/colorTextoBut"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>

