<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.maishealth.maishealth.usuario.gui.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_card"
            android:layout_marginStart="@dimen/margin_start_card"
            android:layout_marginTop="@dimen/margin_top_card"
            app:cardCornerRadius="@dimen/card_border"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/card_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Switch
                    android:id="@+id/swUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_mini_label"
                    android:text="@string/switch_paciente"
                    android:textColorLink="#fa0202"
                    tools:text="Médico" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_thickness"
                    android:layout_marginTop="@dimen/divider_left_and_right"
                    android:layout_marginBottom="@dimen/divider_left_and_right"
                    android:layout_marginStart="@dimen/margin_start_divide"
                    android:layout_marginEnd="@dimen/margin_end_divide"
                    android:background="@color/divider"/>

                <EditText
                    android:id="@+id/edtEmail3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edtSenha3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/prompt_senha"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/edtNome3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/prompt_nome"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/edtCpf3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:hint="@string/prompt_cpf"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/edtNasc3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:hint="@string/prompt_data"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/lblSexo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_top_mini_label"
                    android:layout_marginBottom="@dimen/margin_bottom_mini_label"
                    android:text="@string/label_sexo" />

                <Spinner
                    android:id="@+id/spnSexo3"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/lblTipoSangue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_bottom_mini_label"
                    android:layout_marginTop="@dimen/margin_top_mini_label"
                    android:text="@string/label_tipo_sangue" />

                <Spinner
                    android:id="@+id/spnTipoSangue3"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_bottom_mini_label"
                    android:layout_marginTop="@dimen/margin_top_mini_label"
                    android:text="@string/label_regiao"
                    android:visibility="invisible"
                    tools:text="@string/label_regiao" />

                <Spinner
                    android:id="@+id/SpnRegiao3"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/edtCRM3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/prompt_crm"
                    android:inputType="number"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/edtEspec3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/prompt_especialidade"
                    android:inputType="textPersonName"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCancelar3"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@color/colorButoes"
                        android:onClick="voltarTelaLogin"
                        android:text="@string/button_cancelar"
                        android:textColor="@color/colorTextoBut"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnCadastrar3"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@color/colorButoes"
                        android:onClick="onClickCadastrar"
                        android:text="@string/button_cadastrar"
                        android:textColor="@color/colorTextoBut"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>
