<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundo"
    tools:context="com.maishealth.maishealth.usuario.gui.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            tools:context="com.maishealth.maishealth.usuario.gui.LoginActivity">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:contentDescription="@string/image_logo_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_health" />

            <EditText
                android:id="@+id/emailx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/senhax"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:hint="@string/prompt_senha"
                android:inputType="textPassword"
                android:onClick="validarLogin"
                app:layout_constraintEnd_toEndOf="@+id/emailx"
                app:layout_constraintStart_toStartOf="@+id/emailx"
                app:layout_constraintTop_toBottomOf="@+id/emailx" />

            <Button
                android:id="@+id/bt_entrar"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="19dp"
                android:background="@color/colorButoes"
                android:onClick="validarLogin"
                android:text="@string/button_entrar"
                android:textColor="@color/colorTextoBut"
                app:layout_constraintEnd_toEndOf="@+id/senhax"
                app:layout_constraintStart_toStartOf="@+id/senhax"
                app:layout_constraintTop_toBottomOf="@+id/senhax" />

            <Button
                android:id="@+id/bt_cadastro"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginTop="@dimen/margin_top_button"
                android:background="@color/colorButoes"
                android:onClick="tela1Cadastro"
                android:text="@string/button_cadastro"
                android:textColor="@color/colorTextoBut"
                app:layout_constraintEnd_toEndOf="@+id/bt_entrar"
                app:layout_constraintStart_toStartOf="@+id/bt_entrar"
                app:layout_constraintTop_toBottomOf="@+id/bt_entrar" />

            <ImageButton
                android:id="@+id/bt_emerg_2"
                android:layout_width="wrap_content"
                android:layout_height="108dp"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:contentDescription="@string/button_emergencia"
                android:onClick="acionarEmergencia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/bt_cadastro"
                app:layout_constraintStart_toStartOf="@+id/bt_cadastro"
                app:layout_constraintTop_toBottomOf="@+id/bt_cadastro"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/bt_emerg" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
